descrição fat de cada estado

--- a/kdmile2014.tex
+++ b/kdmile2014.tex
@@ -251,9 +251,10 @@ que o agente recebe recompensas adicionais através de um mecanismo
 interno associado a variações de características do ambiente que lhe
 despertam \emph{marcado interesse}.  Nessas técnicas, o agente é
 codificado de forma a associar subproblemas a variações significativas
-de atributos selecionados na descrição fatorada do estado, reduzindo o
-trabalho de definição das políticas parciais à determinação dos
-atributos relevantes para a identificação dos subproblemas.
+de atributos selecionados na descrição fatorada de cada estado do
+problema, reduzindo o trabalho de definição das políticas parciais à
+determinação dos atributos relevantes para a identificação dos
+subproblemas.
 
 Essa técnica foi aplicada com sucesso na solução de um problema com
 forte estrutura hierárquica \cite{imrl2004}, através da proposta de um
