--- a/kdmile2014.tex
+++ b/kdmile2014.tex
@@ -259,7 +259,7 @@ subproblemas.
 Essa técnica foi aplicada com sucesso na solução de um problema com
 forte estrutura hierárquica \cite{imrl2004}, através da proposta de um
 algoritmo que utiliza em conjunto múltiplas técnicas de AR. Apesar da
-aprensentação detalhada do papel da motivação intrínseca no
+apresentação detalhada do papel da motivação intrínseca no
 aprendizado, não há uma investigação mais aprofundada dos diversos
 componentes de aprendizado envolvidos algoritmo, notadamente a
 estratégia de aplicação das políticas parciais aprendidas. Neste
